tests/integration/snapshots/integration__flir__parsing_error_for_some_files.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test2.R [1:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----
Error: Failed to parse test.R due to syntax errors.

----- args -----
.
